--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       nodejs: 22 # Set this to the Node.js version you need
     commands:
       - echo Installing Node.js in the install phase
+      - node --version
 
   pre_build:
     commands:
@@ -20,6 +21,7 @@ phases:
   post_build:
     commands:
       - echo The build is complete
+      - ls
 
 artifacts:
   files:
